# advent-of-code

./: .gitignore  Cargo.toml  README.md  aoc.sh
2015/: Cargo.toml
2016/: Cargo.toml
2017/: Cargo.toml
2018/: Cargo.toml
2019/: Cargo.toml
2020/: day11.js  day13.js  day16.js  day4.js  day5.js  day7.js  day8.js  utils.js
2021/: README.md  aoc.mjs  day13.mjs  day14.mjs  day15.mjs  day17.mjs  day20.mjs  day21.mjs  day22.mjs  day24.mjs  day3.mjs  day4.mjs  day8.mjs  day9.mjs  prep.sh
2021/data-structures/: point.mjs
2021/utils/: array.mjs
2022/: README.md  aoc.mjs  day1.mjs  day10.mjs  day11.mjs  day16.mjs  day19.mjs  day21.mjs  day22.mjs  day23.mjs  day25.mjs  day3.mjs  day4.mjs  day5.mjs  day7.mjs  day8.mjs  prep.sh
2023/: README.md  aoc.mjs  day06.mjs  day1.mjs  day10.mjs  day12.mjs  day13.mjs  day14.mjs  day16.mjs  day17.mjs  day18.mjs  day19.mjs  day20.mjs  day21.mjs  day24.mjs  day25.mjs  day3.mjs  day4.mjs  day5.mjs  prep.sh
2023/data-structures/: binary-tree.mjs
2023/utils/: color.mjs  number.mjs  priorityqueue.mjs
2024/: day01.mjs  day02.mjs  day04.mjs  day05.mjs  day06.mjs  day07.mjs  day08.mjs  day10.mjs  day11.mjs  day13.mjs  day16.mjs  day17.mjs  day20.mjs  day21.mjs  day22.mjs  day23.mjs  day24.mjs  prep.sh
2024/data-structures/: grid2d.mjs
2025/: Cargo.toml
advent_lib/: Cargo.toml
advent_lib/src/: bootstrap.rs  color.rs  direction.rs  grid.rs  lib.rs  paths.rs  runner.rs
advent_lib/templates/: Cargo.toml.tmpl  dayXX.rs.tmpl
javascript/: aoc.sh
javascript/2017/: README.md
javascript/2020/: day1.js  day10.js  (+9 more)
src/: main.rs
(+70 files in other folders)
