[package]
name = "advent_of_code_2015"
description = "Advent of Code solutions for 2015"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
advent_lib = { workspace = true }
anyhow = { workspace = true }
fnv = "1.0.7"
petgraph = "0.7.0"
regex = "1.11.1"
rust-crypto = "0.2.36"
serde_json = "1.0.134"
